--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ body {
 	text-align: center;
 }
 .geeks {
-    background-color: rgb(35, 25, 25);
+    background-color: rgb(0, 0, 0);
 	font-size: 40px;
+    padding: 0px 0px 20px 0px;
 	font-weight: bold;
 	color: rgb(255, 255, 255);
 }
@@ -16,7 +17,7 @@ body {
 }
 #resetbtn{
     padding: 5px;
-    color:rgb(255, 255, 255);
+    color:rgb(248, 245, 245);
     background-color: rgb(4, 3, 4);
     margin: 20px;
     font-size: 30px;
